[package]
name = "homedirs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.0"
anyhow = "1.0.75"
futures = "0.3.28"
lazy_static = "1.4.0"
ldap3 = "0.11.3"
maud = { version = "0.25.0", features = ["actix-web"] }
rand = "0.8.5"
tokio = { version = "1.32.0", features = ["full"] }
trust-dns-resolver = "0.23.0"
